[gd_scene load_steps=8 format=2]

[ext_resource path="res://Characters/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game.gd" type="Script" id=3]
[ext_resource path="res://Rooms.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI/health_ui.png" type="Texture" id=5]
[ext_resource path="res://UI/UI.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/progress bar.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="Game" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 3 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="HealthBar" type="TextureProgress" parent="UI"]
margin_left = 9.0
margin_top = 10.0
margin_right = 89.0
margin_bottom = 26.0
value = 100.0
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 7 )
tint_progress = Color( 0.498039, 0.0313726, 0.0313726, 1 )

[node name="Tween" type="Tween" parent="UI/HealthBar"]

[node name="PanelContainer" type="PanelContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -7.0
margin_top = -30.0
margin_right = 7.0
margin_bottom = -16.0
grow_horizontal = 2
custom_styles/panel = SubResource( 1 )

[node name="Inventory" type="HBoxContainer" parent="UI/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 12.0
margin_bottom = 12.0

[node name="Rooms" type="Navigation2D" parent="."]
script = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="."]

[connection signal="health_changed" from="Player" to="UI" method="_on_Player_health_changed"]
[connection signal="weapon_dropped" from="Player" to="UI" method="_on_Player_weapon_dropped"]
[connection signal="weapon_picked_up" from="Player" to="UI" method="_on_Player_weapon_picked_up"]
[connection signal="weapon_switched" from="Player" to="UI" method="_on_Player_weapon_switched"]
